--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,8 @@ header {
 
 .card {
     background-image: url();
+    display: flex;
+    flex-wrap: wrap;
 
     &--main {
         background-image: url(./utility/backgr.jpg);
@@ -19,20 +21,20 @@ header {
 
         &--city {
             position: absolute;
-            right: 2.5rem; 
-            top: -1rem;          
+            right: 2.5rem;
+            top: -1rem;
             text-align: right;
             font-size: 2rem;
         }
 
-        &--temp{
+        &--temp {
             position: absolute;
             top: 0;
             left: 1.5rem;
             font-size: 3rem;
         }
 
-        &--description{
+        &--description {
             position: absolute;
             top: 4rem;
             left: 1.5rem;
