--- a/src/App.scss
+++ b/src/App.scss
@@ -3,11 +3,11 @@ header {
     margin-top: .5rem;
 }
 
-header{
+header {
     color: #ddd;
 }
 
-body{
+body {
     background-image: url(./utility/backgr3.jpg);
 }
 
@@ -22,7 +22,7 @@ body{
             margin: 0 auto;
             text-align: center;
             border-radius: 10px 10px 0 0;
-            background-image: url(./utility/backgr.jpg) ;
+            background-image: url(./utility/backgr.jpg);
             background-repeat: no-repeat;
             background-size: cover;
             display: flex;
@@ -77,9 +77,7 @@ body{
     }
 
     &--details {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
+
         align-items: center;
         margin: 0 auto;
         width: 80vw;
@@ -88,11 +86,30 @@ body{
         margin-bottom: 10vh;
         border-radius: 0 0 10px 10px;
 
-        &--left {
+        &--container {
             color: #9900FF;
             text-align: center;
             font-size: 1.5rem;
             font-weight: bolder;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            align-items: center;
+
+
+            &--time{
+                font-size: 1rem;
+                flex: 0 0 20%;
+            }
+
+            &--list {
+                list-style-type: none;
+                display: flex;
+                flex-wrap: wrap;
+                font-size: 1rem;
+                justify-content: space-around;
+                flex: 0 0 70%;
+            }
         }
     }
 }
