--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@ body {
 
 .card {
     background-image: url();
-
+    margin-top: 1.5rem;
     &--main {
 
         &--container {
@@ -82,7 +82,6 @@ body {
         margin: 0 auto;
         width: 80vw;
         background-color: #ddd;
-        height: 50vh;
         margin-bottom: 10vh;
         border-radius: 0 0 10px 10px;
 
@@ -108,7 +107,8 @@ body {
                 flex-wrap: wrap;
                 font-size: 1rem;
                 justify-content: space-around;
-                flex: 0 0 70%;
+                flex: 0 0 65%;
+                border-left:4px solid ;
             }
         }
     }
